--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
   "short_name": "TrigoApp",
-  "name": "Trigonometry Learning App",
+  "name": "Trigonometry Master App by Farheen Naaz",
   "icons": [
     {
-      "src": "logo192.png",
+      "src": "icons/icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "icons/icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
+  "theme_color": "#1e3a8a",
   "background_color": "#ffffff"
 }
